改为纯Java智能体项目 增加ACP协议支持